[package]
name = "os"
version = "0.1.0"
edition = "2018"

[profile.dev]
opt-level = 3
debug = false
strip = "debuginfo"
overflow-check = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["multicore", "input_echo", "init_clock", "user_log", "print_lock", "pcb", "vfs", "pipe", "path_resolve", "syscall"]

board_unleashed = []    # 使用unleashed开发板
init_clock = ["board_unleashed"]    # 配置系统时钟，使用1G Hz
read_buffer = []    # read调用使用缓存区
input_echo  = []    # 输入回显示
multicore   = []    # 开启多核

# 下面的选项用于调试内核模块的输出
user_log = []     # 打印用户态程序输出
print_lock = []   # 使用互斥锁防止多核打印格式混乱
syscall = []
trap = []
scheduler = []
hart = []
pgtbl = []
kalloc = []
pcb = []
signal = []
vfs = []
pipe = []
path_resolve = []


[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
buddy_system_allocator = "0.6"
spin = "0.7.0"
bitflags = "1.2.1"
xmas-elf = "0.8.0"