[package]
name = "user_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"

[[bin]]
name = "hello_world"
path = "src/hello_world.rs"

[[bin]]
name = "loop10"
path = "src/loop10.rs"

[[bin]]
name = "get_pid"
path = "src/get_pid.rs"

[[bin]]
name = "sys_wait4"
path = "src/sys_wait4.rs"

[[bin]]
name = "sys_brk"
path = "src/sys_brk.rs"

[[bin]]
name = "sys_kill"
path = "src/sys_kill.rs"

[[bin]]
name = "forkboom"
path = "src/forkboom.rs"

[[bin]]
name = "signal_chld"
path = "src/signal_chld.rs"

[[bin]]
name = "times"
path = "src/times.rs"